--- a/paata.html
+++ b/paata.html
@@ -68,7 +68,12 @@
 
 </div>
 
-<script src="../js/vendor/jquery.js"></script>
+<div id = "footer">
+	Designed and developed by <a href = "http://nischaal.me">Nischaal Cooray</a>.
+</div>
+
+<!-- Scripts -->
+<script src="js-p/jquery.js"></script>
 <script src="js-p/foundation/foundation.js"></script>
 <script src="js-p/foundation/foundation.slider.js"></script>
 
