--- a/paata.html
+++ b/paata.html
@@ -12,7 +12,7 @@
 	
 	<link rel="stylesheet" href="css-p/main.css">
 	<link rel = "stylesheet" href = "css-p/foundation.css">
-	<link href='http://fonts.googleapis.com/css?family=Permanent+Marker|Josefin+Slab|Lato' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Permanent+Marker|Josefin+Slab' rel='stylesheet' type='text/css'>
 	
 </head>
 
@@ -57,7 +57,7 @@
 	</div>
 	
 	<div class = "slider-row">
-		<div class="range-slider" data-slider data-options="display_selector: #alpha; start: 0.1; end: 1; step: 0.1;">
+		<div class="range-slider" data-slider data-options="display_selector: #alpha; start: 0; end: 1; step: 0.1;">
 		  <span class="range-slider-handle">A</span>
 		  <span class="range-slider-active-segment"></span>
 		</div>
@@ -79,6 +79,24 @@
 
 <script>
 	$(document).foundation(); 
+
+	function componentToHex(c) {
+		var hex = c.toString(16);
+		return hex.length == 1 ? "0" + hex : hex;
+	}
+
+	function rgbToHex(r, g, b) {
+		var color = "#" + componentToHex(r) + componentToHex(g) + componentToHex(b);
+		document.body.style.background = color;
+	}
+
+	$('[data-slider]').on('change.fndtn.slider', function(){
+		var red = $('.range-slider').attr('data-slider');
+		var green = $('.range-slider').attr('data-slider');
+		var blue = $('.range-slider').attr('data-slider');
+		
+		rgbToHex(parseInt(red), parseInt(green), parseInt(blue));
+	});	
 </script>
 
 </body>
