--- a/paata.html
+++ b/paata.html
@@ -55,16 +55,6 @@
 			<span id="blueOut"></span>
 		</div>
 	</div>
-	
-	<div class = "slider-row">
-		<div class="range-slider" data-slider data-options="display_selector: #alpha; start: 0; end: 1; step: 0.1;">
-		  <span class="range-slider-handle">A</span>
-		  <span class="range-slider-active-segment"></span>
-		</div>
-		<div class = "slider-text">
-			<span id="alpha"></span>
-		</div>
-	</div>
 
 </div>
 
@@ -79,7 +69,25 @@
 
 <script>
 	$(document).foundation(); 
+	
+	$( document ).ready(function() {
+		var color = "";
+		var count = 0;
+		
+		$('.range-slider').each(function() {
+            if (count < 2) {
+				color = color + $(this).attr('data-slider') + ',';
+			}
+			else{
+				color = color + $(this).attr('data-slider');}
+				
+			count++;
+        });
 
+		color = 'rgb(' + color + ')';
+		$('body').css( "background", color);
+	});
+	
 	function componentToHex(c) {
 		var hex = c.toString(16);
 		return hex.length == 1 ? "0" + hex : hex;
@@ -87,16 +95,27 @@
 
 	function rgbToHex(r, g, b) {
 		var color = "#" + componentToHex(r) + componentToHex(g) + componentToHex(b);
-		document.body.style.background = color;
+		//document.body.style.background = color;
 	}
 
 	$('[data-slider]').on('change.fndtn.slider', function(){
-		var red = $('.range-slider').attr('data-slider');
-		var green = $('.range-slider').attr('data-slider');
-		var blue = $('.range-slider').attr('data-slider');
 		
-		rgbToHex(parseInt(red), parseInt(green), parseInt(blue));
-	});	
+		var color = "";
+		var count = 0;
+		
+		$('.range-slider').each(function() {
+            if (count < 2) {
+				color = color + $(this).attr('data-slider') + ',';
+			}
+			else{
+				color = color + $(this).attr('data-slider');}
+				
+			count++;
+        });
+
+		color = 'rgb(' + color + ')';
+		$('body').css( "background", color);
+	});
 </script>
 
 </body>
