--- a/paata.html
+++ b/paata.html
@@ -59,7 +59,7 @@
 </div>
 
 <div id = "footer">
-	Designed and developed by <a href = "http://nischaal.me">Nischaal Cooray</a>.
+	Made with &hearts; by <a href = "http://nischaal.me">Nischaal Cooray</a>.
 </div>
 
 <!-- Scripts -->
