--- a/paata.html
+++ b/paata.html
@@ -27,7 +27,7 @@
 
 <div id = "slider-container">
 	<div class = "slider-row">
-		<div class="range-slider" data-slider data-options="display_selector: #redOut;">
+		<div class="range-slider" data-slider>
 		  <span class="range-slider-handle">R</span>
 		  <span class="range-slider-active-segment"></span>
 		</div>
@@ -37,7 +37,7 @@
 	</div>
 	
 	<div class = "slider-row">
-		<div class="range-slider" data-slider data-options="display_selector: #greenOut;">
+		<div class="range-slider" data-slider>
 		  <span class="range-slider-handle">G</span>
 		  <span class="range-slider-active-segment"></span>
 		</div>
@@ -47,7 +47,7 @@
 	</div>
 	
 	<div class = "slider-row">
-		<div class="range-slider" data-slider data-options="display_selector: #blueOut;">
+		<div class="range-slider" data-slider>
 		  <span class="range-slider-handle">B</span>
 		  <span class="range-slider-active-segment"></span>
 		</div>
@@ -55,17 +55,15 @@
 			<span id="blueOut"></span>
 		</div>
 	</div>
-    
-    <div class = "slider-row">
-		<div class="range-slider" data-slider data-options="display_selector: #alpha; start: 0; end: 1; step: 0.1;">
-		  <span class="range-slider-handle">A</span>
-		  <span class="range-slider-active-segment"></span>
-		</div>
-		<div class = "slider-text">
-			<span id="alpha"></span>
-		</div>
-	</div>
+</div>
 
+<div id = "value-disp">
+    <div class = "val-cont"><span id = "rgb-val"></span></div>
+    <div class = "val-cont"><span id = "hex-val"></span></div>
+</div>
+
+<div id = "comp-cont">
+    <div class = "a-cont"></div>
 </div>
 
 <div id = "footer">
