--- a/paata.html
+++ b/paata.html
@@ -12,7 +12,7 @@
 	
 	<link rel="stylesheet" href="css-p/main.css">
 	<link rel = "stylesheet" href = "css-p/foundation.css">
-	<link href='http://fonts.googleapis.com/css?family=Finger+Paint|Josefin+Slab' rel='stylesheet' type='text/css'>	
+	<link href='http://fonts.googleapis.com/css?family=Finger+Paint|Josefin+Slab' rel='stylesheet' type='text/css'>
 	
 </head>
 
@@ -29,6 +29,7 @@
 	<div class = "slider-row">
 		<div class="range-slider" data-slider>
 		  <span class="range-slider-handle">R</span>
+		  <span class="range-slider-active-segment"></span>
 		</div>
 		<div class = "slider-text">
 			<span id="redOut"></span>
@@ -38,6 +39,7 @@
 	<div class = "slider-row">
 		<div class="range-slider" data-slider>
 		  <span class="range-slider-handle">G</span>
+		  <span class="range-slider-active-segment"></span>
 		</div>
 		<div class = "slider-text">
 			<span id="greenOut"></span>
@@ -47,6 +49,7 @@
 	<div class = "slider-row">
 		<div class="range-slider" data-slider>
 		  <span class="range-slider-handle">B</span>
+		  <span class="range-slider-active-segment"></span>
 		</div>
 		<div class = "slider-text">
 			<span id="blueOut"></span>
