--- a/paata.html
+++ b/paata.html
@@ -12,7 +12,7 @@
 	
 	<link rel="stylesheet" href="css-p/main.css">
 	<link rel = "stylesheet" href = "css-p/foundation.css">
-	<link href='http://fonts.googleapis.com/css?family=Finger+Paint|Josefin+Slab' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Josefin+Slab|Finger+Paint' rel='stylesheet' type='text/css'>
 	
 </head>
 
@@ -31,9 +31,6 @@
 		  <span class="range-slider-handle">R</span>
 		  <span class="range-slider-active-segment"></span>
 		</div>
-		<div class = "slider-text">
-			<span id="redOut"></span>
-		</div>
 	</div>
 	
 	<div class = "slider-row">
@@ -41,18 +38,12 @@
 		  <span class="range-slider-handle">G</span>
 		  <span class="range-slider-active-segment"></span>
 		</div>
-		<div class = "slider-text">
-			<span id="greenOut"></span>
-		</div>
 	</div>
 	
 	<div class = "slider-row">
 		<div class="range-slider" data-slider>
 		  <span class="range-slider-handle">B</span>
 		  <span class="range-slider-active-segment"></span>
-		</div>
-		<div class = "slider-text">
-			<span id="blueOut"></span>
 		</div>
 	</div>
 </div>
