--- a/paata.html
+++ b/paata.html
@@ -23,8 +23,6 @@
 	<span id = "subtitle">Pronounced Paa-te. Not Paa-ta and definitely not Pâté.</span>
 </div>
 
-<p class = "dev-notice"> Still in Development! </p>
-
 <div id = "slider-container">
 	<div class = "slider-row">
 		<div class="range-slider" data-slider>
@@ -49,12 +47,9 @@
 </div>
 
 <div id = "value-disp">
-    <div class = "val-cont"><span id = "rgb-val"></span></div>
     <div class = "val-cont"><span id = "hex-val"></span></div>
-</div>
-
-<div id = "comp-cont">
-    <div class = "a-cont"></div>
+    <div class = "val-cont"><span id = "rgb-val"></span></div>
+	<div class = "comp-val-cont"><span id = "comp-val"></span></div>
 </div>
 
 <div id = "footer">
