--- a/paata.html
+++ b/paata.html
@@ -10,9 +10,10 @@
 	<meta name="copyright" content="NischaalCooray" />
 	<meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=1'>
 	
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="css-p/main.css">
 	<link rel = "stylesheet" href = "css-p/foundation.css">
-	<link href='https://fonts.googleapis.com/css?family=Josefin+Slab|Finger+Paint' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Josefin+Slab|Finger+Paint' rel='stylesheet' type='text/css'>
 	
 </head>
 
@@ -53,7 +54,8 @@
 </div>
 
 <div id = "footer">
-	Made with &hearts; by <a href = "http://nischaal.me">Nischaal Cooray</a>.
+	<span id = "text">Made with &hearts; by <a href = "http://nischaal.me">Nischaal Cooray</a>.</span>
+	<a href = "http://git.io/DpVD5Q" target = "_blank"><span id = "info">?</span></a>
 </div>
 
 <!-- Scripts -->
