--- a/paata.html
+++ b/paata.html
@@ -55,7 +55,7 @@
 
 <div id = "footer">
 	<span id = "text">Made with &hearts; by <a href = "http://nischaal.me">Nischaal Cooray</a>.</span>
-	<a href = "http://git.io/DpVD5Q" target = "_blank"><span id = "info">?</span></a>
+	<a href = "https://github.com/nischaalc/paata" target = "_blank"><span id = "info">?</span></a>
 </div>
 
 <!-- Scripts -->
