--- a/paata.html
+++ b/paata.html
@@ -13,7 +13,7 @@
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="css-p/main.css">
 	<link rel = "stylesheet" href = "css-p/foundation.css">
-	<link href='http://fonts.googleapis.com/css?family=Josefin+Slab|Finger+Paint' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Josefin+Slab|Finger+Paint' rel='stylesheet' type='text/css'>
 	
 </head>
 
